# jelly-text-editor

./: Cargo.toml
src/: main.rs
src/app/: app.rs
