[package]
name = "crossterm_prac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-std = {version = "*", features = ["attributes"]}

[dependencies.crossterm]
version = "*"
features = ["event-stream"]

[dependencies.async-std]
version = "*"
features = ["attributes"]
